--- a/taller2-typescript/package.json
+++ b/taller2-typescript/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "taller2-typescript",
+  "name": "typescript-taller2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/main.ts",
+    "build": "tsc",
+    "start": "node src/main.js"
   },
-  "keywords": [],
-  "author": "Danny Valencia",
-  "license": "ISC",
-  "type": "commonjs",
+  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^24.5.2",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "@types/node": "^20.0.0"
   }
 }
