--- a/taller2-typescript/tsconfig.json
+++ b/taller2-typescript/tsconfig.json
@@ -1,12 +1,15 @@
 {
-  
   "compilerOptions": {
-  
-    "module": "commonjs",
-    "target": "ES6",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    
-  }
+    "target": "ES2020",                  // Versión de JS de salida
+    "module": "CommonJS",               // Sistema de módulos para Node.js
+    "rootDir": "src",                   // Carpeta de entrada (donde está tu código .ts)
+    "outDir": "dist",                   // Carpeta de salida para los .js compilados
+    "strict": true,                     // Habilita comprobaciones estrictas
+    "esModuleInterop": true,            // Mejor manejo de imports/exports
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
+  },
+  "include": ["src"],                   // Compilar solo lo que está en src
+  "exclude": ["node_modules"]           // Ignorar node_modules
 }
+
