--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "taller2-typescript/src",
+    "rootDir": "src",
     "outDir": "dist",
     "strict": true
   }
